--- a/style/style.css
+++ b/style/style.css
@@ -3,6 +3,8 @@ body {
   background-color: #000;
   font-family: sans-serif;
   margin: 0px;
+  width: 100%;
+  height: 100%;
 }
 
 h1{
@@ -12,7 +14,14 @@ h1{
 
 canvas {
   background-color: #000;
-  /*background-image: url('../assets/objects/env/cityblock/envmap.jpg');*/
-  background-size: 100% 150%;
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
   width: 100%;
+  height: 100%;
+  overflow:hidden;
+  padding: 0px;
+  margin: 0px;
 }
