--- a/style/style.css
+++ b/style/style.css
@@ -2,19 +2,29 @@ body {
   text-align: center;
   background-color: #000;
   font-family: sans-serif;
-  margin: 0px;
+  margin: 0;
   width: 100%;
   height: 100%;
   overflow: hidden;
   cursor: crosshair;
-}
-
-h1{
-  color: #fff;
-
+  padding: 0;
 }
 
 canvas {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 100%;
+  overflow:hidden;
+  padding: 0px;
+  margin: 0px;
+  z-index: 10;
+}
+
+#backgroundCanvas {
   background-color: #000;
   position: absolute;
   top: 0px;
@@ -26,4 +36,5 @@ canvas {
   overflow:hidden;
   padding: 0px;
   margin: 0px;
+  z-index: 5;
 }
