--- a/style/style.css
+++ b/style/style.css
@@ -10,6 +10,20 @@ body {
   padding: 0;
 }
 
+#cameraCanvas {
+  position: absolute;
+  top: 0px;
+  left: 0px;
+  right: 0px;
+  bottom: 0px;
+  width: 100%;
+  height: 100%;
+  overflow:hidden;
+  padding: 0px;
+  margin: 0px;
+  z-index: 20;
+}
+
 #gameCanvas {
   position: absolute;
   top: 0px;
@@ -22,6 +36,7 @@ body {
   padding: 0px;
   margin: 0px;
   z-index: 10;
+  display: none;
 }
 
 #backgroundCanvas {
