--- a/style/style.css
+++ b/style/style.css
@@ -11,7 +11,7 @@ body {
 }
 
 #gameCanvas {
-  position: absolute;
+  /*position: absolute;
   top: 0px;
   left: 0px;
   right: 0px;
@@ -21,5 +21,5 @@ body {
   overflow:hidden;
   padding: 0px;
   margin: 0px;
-  z-index: 10;
+  z-index: 10;*/
 }
